--- a/frontend/joy_tim/mobile.html
+++ b/frontend/joy_tim/mobile.html
@@ -66,8 +66,9 @@
   </form>
 
   <!-- 查詢結果區域 -->
-  <div id="queryResults" class="hidden">
-<!--    <div id="queryResults" class="hidden">-->
+  <div id="queryResults" >
+<!--   TODO: replace this in production
+ <div id="queryResults" class="hidden">-->
 
     <details open>
       <summary>社會局 可補助<span class="amount">$5000</span></summary>
