--- a/frontend/joy_tim/subsidy-form.html
+++ b/frontend/joy_tim/subsidy-form.html
@@ -6,7 +6,7 @@
   <title>補助查詢表單</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<div>
 
     <!-- Header -->
     <div class="header">補助查詢</div>
@@ -62,8 +62,9 @@
             <button type="reset" class="btn-clear">清除</button>
           </div>
         </form>
-
-        <!-- 查詢結果區域 -->
+      </div>
+    <div class="form-container">
+    <!-- 查詢結果區域 -->
         <div id="queryResults" >
           <details open>
             <summary>社會局 可補助<span class="amount">$5000</span></summary>
@@ -93,6 +94,7 @@
           </details>
         </div>
       </div>
+</div>
     <!-- Footer -->
     <div class="footer">
       <button id="tab-1" ><a href="subsidy-form.html" style="color: #007B80">補助查詢</a> </button>
