--- a/frontend/joy_tim/vaccine-timeline.html
+++ b/frontend/joy_tim/vaccine-timeline.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <!-- Header -->
-<div class="header">補助查詢</div>
+<div class="header">疫苗軌跡</div>
 
 <div class="form-container">
   <div class="vaccine-timeline-header">
@@ -34,7 +34,8 @@
 
       </div>
     </div>
-    <br><br>
+</div>
+<div class="form-container">
 
     <div class="vaccine-timeline">
       <!-- 疫苗記錄 -->
@@ -73,6 +74,7 @@
       </div>
     </div>
   </div>
+
   <!-- Footer -->
   <div class="footer">
     <button id="tab-1" ><a href="subsidy-form.html" style="color: #007B80">補助查詢</a> </button>
